--- a/app/assets/stylesheets/components/images/image_index.scss
+++ b/app/assets/stylesheets/components/images/image_index.scss
@@ -29,12 +29,32 @@
     position: relative;
     left: 15px;
     top: -12px;
-    color: white;
+    color: var(--color-white);
   }
 }
 
 .image-display-title {
   display: none;
+}
+
+.loading-indicator-container {
+  height: 2000px;
+}
+
+.spinner {
+  animation: rotate 400ms linear infinite;
+  z-index: 2;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  margin: -25px 0 0 -25px;
+  width: 50px;
+  height: 50px;
+  & .path {
+    stroke: var(--color-stroke-blue);
+    stroke-linecap: round;
+    animation: dash 1.5s ease-in-out infinite;
+  }
 }
 
 @media (max-width: 1300px) {
@@ -58,26 +78,6 @@
   -moz-column-count:    1;
   -webkit-column-count: 1;
   column-count:         1;
-  }
-}
-
-.loading-indicator-container {
-  height: 2000px;
-}
-
-.spinner {
-  animation: rotate 400ms linear infinite;
-  z-index: 2;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: -25px 0 0 -25px;
-  width: 50px;
-  height: 50px;
-  & .path {
-    stroke: hsl(210, 70, 75);
-    stroke-linecap: round;
-    animation: dash 1.5s ease-in-out infinite;
   }
 }
 
