finished followers/followee modal

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,7 @@
 @import "./components/footer.scss";
 @import "./components/comments/comments_form.scss";
 @import "./components/developer_message.scss";
+@import "./components/modal.scss";
 
 html {
   box-sizing: border-box;
