--- a/app/assets/stylesheets/components/users/user_show.scss
+++ b/app/assets/stylesheets/components/users/user_show.scss
@@ -490,6 +490,7 @@
     max-width: 100%;
     display: flex;
     margin-left: 16px;
+    cursor: pointer;
     p:first-child {
       font-size: 14px;
       line-height: 20px;
@@ -510,6 +511,7 @@
     max-width: 100%;
     display: flex;
     margin-left: 16px;
+    cursor: pointer;
     p:first-child {
       font-size: 14px;
       line-height: 20px;
